# KickBass-Assistant

./: CMakeLists.txt  LICENSE  README.md
docs/: PRD.md  USER_GUIDE_ZH.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
